PDFs are sent to Cepheus for text extraction and displayed correctly;
Display of documents in views has been fixed;