@@ -10,14 +10,23 @@ import java.net.URLConnection;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 
 import edu.asu.diging.gilesecosystem.web.core.IFile;
 import edu.asu.diging.gilesecosystem.web.files.IFileStorageManager;
+import edu.asu.diging.gilesecosystem.web.service.IFileContentHelper;
 import edu.asu.diging.gilesecosystem.web.service.IFileTypeHandler;
+import edu.asu.diging.gilesecosystem.web.service.properties.IPropertiesManager;
 
 public abstract class AbstractFileHandler implements IFileTypeHandler {
     
     private Logger logger = LoggerFactory.getLogger(getClass());
+    
+    @Autowired
+    protected IPropertiesManager propertyManager;
+    
+    @Autowired
+    protected IFileContentHelper fileContentHelper;
     
     protected byte[] getFileContentFromUrl(URL url) throws IOException {
         URLConnection con = url.openConnection();
@@ -45,14 +54,20 @@ public abstract class AbstractFileHandler implements IFileTypeHandler {
     
     @Override
     public byte[] getFileContent(IFile file) {
-        String folderPath = getStorageManager().getAndCreateStoragePath(file.getUsername(), file.getUploadId(), file.getDocumentId());
-        File fileObject = new File(folderPath + File.separator + file.getFilename());
         try {
-            return getFileContentFromUrl(fileObject.toURI().toURL());
+            return fileContentHelper.getFileContentFromUrl(new URL(file.getDownloadUrl()));
         } catch (IOException e) {
-            logger.error("Could not read file.", e);
+            logger.error("Could not download file.", e);
             return null;
         }
+    }
+    
+    public String getFileUrl(IFile file) {
+        String gilesUrl = propertyManager.getProperty(IPropertiesManager.GILES_URL).trim();
+        String pdfEndpoint = propertyManager.getProperty(IPropertiesManager.GILES_FILE_ENDPOINT).trim();
+        String contentSuffix = propertyManager.getProperty(IPropertiesManager.GILES_FILE_CONTENT_SUFFIX).trim();
+        
+        return gilesUrl + pdfEndpoint + file.getId() + contentSuffix;
     }
     
     protected abstract IFileStorageManager getStorageManager();
